# red_vs_blue

./: .gitignore  JSON_QUICK_REFERENCE.md  QUICK_REFERENCE.md  README.md  pyproject.toml  red_vs_blue.md  requirements.txt
analysis/: aggregate_results.py  merge_logs.py  model_profiles.py  plots.py  run_polarix_analysis.py
configs/: sh_5p.yaml
polarix_sh/: __init__.py  env.py  reward.py  run_benchmark.py  task.py
red_vs_blue/: agents.py  env.py  metrics.py  scoring.py  task.py
red_vs_blue/analysis/: ACTION_EFFICIENCY_ANALYSIS.md  COLLABORATION_QUALITY_ANALYSIS.md  CONFUSION_ANALYSIS.md  CROSS_ANALYSIS_FINDINGS.md  OUTCOME_ATTRIBUTION_ANALYSIS.md  README.md  RISK_MANAGEMENT_ANALYSIS.md  ROLE_UTILIZATION_ANALYSIS.md  STRATEGY_ANALYSIS.md  __init__.py  action_efficiency_analysis.py  advanced_analysis.py  llm_client.py  (+14 more)
tests/: final_test.py  integration_test.py  test_agent_prompts.py  test_analysis_folder_coverage.py  test_analysis_module.py  test_analysis_next_coverage.py  test_belief_fix.py  test_belief_tracking.py  test_comprehensive.py  test_confusion_analysis.py  test_coverage_boost.py  test_critical.py  test_e2e_game_flow.py  test_executive_summary.py  test_fixed.py  test_game_voting.py  test_initial_president.py  test_llm_summary.py  test_observation_structure.py  test_observation_values.py  test_patch_visibility.py  test_polarix_sh_reward.py  test_prompt_fix.py  test_refactored_task.py  test_rules.py  test_task_agents_coverage.py  test_vote_fix.py  test_voting.py  test_voting_prompt_display.py  verify_tests.py  verify_voting_fix.py  verify_voting_fix_final.py
