[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-vs-blue-benchmark"
version = "0.1.0"
description = "Inspect-based multi-agent benchmark for adversarial social reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

keywords = [
  "inspect-ai",
  "benchmark",
  "multi-agent",
  "llm-evaluation",
  "epistemic-reasoning",
  "social-deduction"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "inspect-ai",
  "numpy",
  "pandas",
  "matplotlib",
  "scipy"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy"
]

[tool.setuptools]
packages = ["red_vs_blue"]

[tool.black]
line-length = 200
target-version = ["py310"]

[tool.ruff]
line-length = 200
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
